force-app/main/default/objects/Session_Time__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Session Times</relationshipLabel>
    <relationshipName>Session_Times</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>