force-app/main/default/objects/Session_Time__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>The status of the case at the time of this session.</description>
    <label>Case Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>