force-app/main/default/objects/Session_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Agent__c</columns>
    <columns>Date__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Duration__c</columns>
    <columns>Manual_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Session Times</label>
</ListView>